--- a/Web-Server/stylesheet.css
+++ b/Web-Server/stylesheet.css
@@ -1,8 +1,16 @@
 body {
     background-color: #32373a;
-}
-
-h1 {
     color: white;
 }
 
+/* h1, h3 {
+    color: white;
+} */
+
+/* #text {
+    color: white;
+} */
+
+a {
+    color: white;
+}
