--- a/src/Web-Server/static/styles.css
+++ b/src/Web-Server/static/styles.css
@@ -11,8 +11,8 @@ a:hover
 }
 
 .graph {
-    background-color: blue;
-    border: 1px solid black
+    background-color: grey;
+    border: 1px solid black;
 }
 
 .sensor-card-title {
